--- a/src/main/resources/templates/users/creationForm.html
+++ b/src/main/resources/templates/users/creationForm.html
@@ -20,8 +20,24 @@
         <label for="passwordInput" class="form-label">パスワード</label>
         <input type="password" id="passwordInput" class="form-control" th:field="*{password}"
                th:classappend="${#fields.hasErrors('password')} ? is-invalid">
-
         <p class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">(errors)</p>
+    </div>
+    <!-- 権限-->
+    <div class="mt-3">
+        <label for="authorityRadio" class="form-label">権限</label>
+        <div id="authorityRadio">
+            <div class="form-check" th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
+                <input class="form-check-input" type="radio" id="authorityAdminRadio" th:field="*{authority}"
+                       th:classappend="${#fields.hasErrors('authority')} ? is-invalid" value="ADMIN">
+                <label class="form-check-label" for="authorityAdminRadio">ADMIN</label>
+            </div>
+            <div class="form-check" th:classappend="${#fields.hasErrors('authority')} ? is-invalid">
+                <input class="form-check-input" type="radio" id="authorityUserRadio" th:field="*{authority}"
+                       th:classappend="${#fields.hasErrors('authority')} ? is-invalid" value="USER">
+                <label class="form-check-label" for="authorityUserRadio">USER</label>
+            </div>
+            <p class="invalid-feedback" th:if="${#fields.hasErrors('authority')}" th:errors="*{authority}">(errors)</p>
+        </div>
     </div>
     <!-- ボタン（作成、キャンセル）-->
     <div class="mt-3">
